--- a/ParallelConvexHull (MergeHull)/ParallelConvexHull (MergeHull).vcxproj
+++ b/ParallelConvexHull (MergeHull)/ParallelConvexHull (MergeHull).vcxproj
@@ -115,8 +115,25 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ConvexHull.h" />
+    <ClInclude Include="Geometry.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
+    <Import Project="..\packages\sdl2.v140.redist.2.0.4\build\native\sdl2.v140.redist.targets" Condition="Exists('..\packages\sdl2.v140.redist.2.0.4\build\native\sdl2.v140.redist.targets')" />
+    <Import Project="..\packages\GnuPlotSharp.1.1.6242.25164\build\GnuPlotSharp.targets" Condition="Exists('..\packages\GnuPlotSharp.1.1.6242.25164\build\GnuPlotSharp.targets')" />
   </ImportGroup>
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\sdl2.v140.redist.2.0.4\build\native\sdl2.v140.redist.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\sdl2.v140.redist.2.0.4\build\native\sdl2.v140.redist.targets'))" />
+    <Error Condition="!Exists('..\packages\GnuPlotSharp.1.1.6242.25164\build\GnuPlotSharp.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\GnuPlotSharp.1.1.6242.25164\build\GnuPlotSharp.targets'))" />
+  </Target>
 </Project>
